--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>storehub-replicator</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>DineFlow |  จัดการร้านอาหาร ง่าย ครบ จบในระบบเดียว </title>
+    <meta name="description" content="ระบบจัดการร้านอาหาร ง่าย ครบ จบในระบบเดียว " />
+    <meta name="author" content="Gracer Corp" />
 
-    <meta property="og:title" content="Lovable Generated Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="DineFlow" />
+    <meta property="og:description" content="จัดการร้านอาหาร ง่าย ครบ จบในระบบเดียว " />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@" />
+    <meta name="twitter:image" content="" />
   </head>
 
   <body>
